# Build-Deploy-Regression-Time-Series-ML-FastAPI-MLFlow-Docker-CI-CD-AWS

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  scaffold.py  setup.py
.github/workflows/: cd.yml  ci.yml
config/: config.yaml
docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
infrastructure/: alb.tf  ecr.tf  ecs.tf  main.tf  s3.tf
mlruns/235894747857217727/: meta.yaml
mlruns/235894747857217727/01967c45838d40a8937cde3306fae18b/: meta.yaml
mlruns/235894747857217727/0e7c486cc27047009eab5d8b02953ae2/: meta.yaml
mlruns/235894747857217727/1054bf1075de4615a70ba3fb3f1b3294/: meta.yaml
mlruns/235894747857217727/20fb6f3aec654d8a919a14cb8fe923d4/: meta.yaml
mlruns/235894747857217727/2e3655ce3044431ca6d59152c23e81be/: meta.yaml
mlruns/235894747857217727/30035df61e834811862d672c56f8f14f/: meta.yaml
mlruns/235894747857217727/339e877c95334605a890e7f31c3b14c9/: meta.yaml
mlruns/235894747857217727/3e67da67af1542efb4839a68d85d4332/: meta.yaml
mlruns/235894747857217727/9629f78304c041ccbd6c235a4ce336d1/: meta.yaml
mlruns/235894747857217727/9de0b0986ab5441f9fe4244ed1a46a50/: meta.yaml
notebooks/: 01_data_ingest.ipynb  01_data_split.ipynb  03_feature_eng.ipynb  04_baseline.ipynb  05_regularization.ipynb  07_hyperparameter_tuning.ipynb
src/api/: main.py  schemas.py
src/api/routers/: predict.py
src/dashboard/: app.py
src/pipeline/: features.py  inference.py  ingest.py  preprocess.py  train.py
src/utils/: config.py  logging.py
tests/: test_api.py  test_features.py  test_pipeline.py
(+186 files in other folders)
