[project]
name = "housing-regression-mle"
version = "0.1.0"
description = "Housing Regression MLE End-to-End Deployment — 3MTT Workshop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Machine Learning
    "xgboost>=2.0.3",
    "optuna>=3.6.1",
    "mlflow>=2.13.0",
    "scikit-learn>=1.4.2",
    "great-expectations>=0.18.15",
    # API & Serving
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    # Dashboard & Visualisation
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    # Data Processing
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "dask[dataframe]>=2024.5.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "kaggle",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
